--- a/src/assets/less/critical.less
+++ b/src/assets/less/critical.less
@@ -1,174 +1,171 @@
-/* STYLES FOR ABOVE THE FOLD */
-
 /*-- -------------------------- -->
 <---           Hero             -->
 <--- -------------------------- -*/
 
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-    #hero {
-        z-index: 1;
-        position: relative;
-        /* prevents overflow from the lines extending past the screen width */
+    #hero-2334 {
+        /* 150px - 258px Top */
+        padding: clamp(9rem, 23.95vw, 16.125rem) (16/16rem) (0/16rem);
         overflow: hidden;
-        /* changes on tablet */
-        padding: 0 (16/16rem);
-        padding-bottom: (100/16rem);
-        font-family: "Roboto", "Arial", sans-serif;
-        /* Centers button */
-        text-align: center;
+        position: relative;
+        z-index: 1;
 
-        .cs-picture {
-            z-index: -2;
+        .cs-container {
+            width: 100%;
+            max-width: (1280/16rem);
+            margin: auto;
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: (88/16rem);
+        }
+
+        .cs-content {
+            /* set text align to left if content needs to be left aligned */
+            text-align: left;
+            width: 100%;
+            max-width: (630/16rem);
+            /* 60px - 80px top & Bottom */
+            /* 16px - 32px left & right */
+            padding: clamp(3.75rem, 8vw, 5rem) clamp(1rem, 5vw, 2rem);
+            display: flex;
+            flex-direction: column;
+            /* centers content horizontally, set to flex-start to left align */
+            align-items: flex-start;
+            position: relative;
+            z-index: 1;
+        }
+
+        .cs-overlay {
+            width: 100%;
+            height: 100%;
+            background-color: #111418;
+            overflow: hidden;
             position: absolute;
             top: 0;
             left: 0;
-            display: block;
-            height: 100%;
-            /* Background Image */
-            width: 100%;
-
-            img {
-                position: absolute;
-                top: 0;
-                left: 0;
-                height: 100%;
-                width: 100%;
-                /* Makes image act like a background-image */
-                object-fit: cover;
-            }
-
-            &:before {
-                z-index: 1;
-                position: absolute;
-                top: 0;
-                left: 0;
-                /* Black Color Overlay */
-                content: "";
-                opacity: 0.7;
-                display: block;
-                background: #000;
-                height: 100%;
-                width: 100%;
-                /* prevents the cursor from interacting with it */
-                pointer-events: none;
-            }
+            z-index: -1;
         }
 
-        .cs-container {
-            position: relative;
-            margin: auto;
-            max-width: (1280/16em);
-            width: 100%;
-            /* we put the padding top and bottom on the container instead of #Hero so the pseudo element lines go to the top and bottom of the section */
-            /* 144px - 280px - leaving extra space for the navigation */
-            /* changes on tablet */
-            padding: clamp(9em, 25.95vw, 17.5em) 0;
-
-            &:before {
-                position: absolute;
-                top: 0;
-                left: 0;
-                /* Left Line */
-                content: "";
-                opacity: 1;
-                display: block;
-                background: -moz-linear-gradient(top, rgba(250, 251, 252, 0.5) 0%, rgba(250, 251, 252, 0) 100%); /* FF3.6-15 */
-                background: -webkit-linear-gradient(top, rgba(250, 251, 252, 0.5) 0%, rgba(250, 251, 252, 0) 100%); /* Chrome10-25,Safari5.1-6 */
-                height: 100%;
-                width: 1px;
-            }
-        }
-
-        .cs-flex-group {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: flex-start;
-            margin: auto;
-            /* 60px - 220px */
-            margin-bottom: clamp(3.75em, 15.5vw, 13.75em);
-            /* 464px - 562px */
-            max-width: clamp(29em, 60vw, 35.125em);
-            width: 80vw;
-            box-sizing: border-box;
-        }
-
-        .cs-topper {
-            margin-bottom: (16/16rem);
-            color: var(--primary);
-            text-align: center;
+        .cs-graphic {
+            width: (1885/16rem);
+            height: auto;
+            opacity: .1;
+            position: absolute;
+            bottom: 0;
+            right: 0;
         }
 
         .cs-title {
+            /* 39px - 61px */
+            font-size: clamp(2.4375rem, 6.4vw, 3.8125rem);
+            font-weight: 900;
+            text-transform: uppercase;
+            line-height: 1.2em;
             width: 100%;
+            max-width: 17ch;
+            margin: 0 0 (16/16rem);
             color: var(--bodyTextColorWhite);
-            text-align: center;
+            position: relative;
+        }
+
+        .cs-tag {
+            /* 25px - 39px */
+            font-size: clamp(1.5625rem, 4vw, 2.4375rem);
+            margin-bottom: (4/16rem);
+            display: block;
         }
 
         .cs-text {
-            /* 32px - 40px */
-            margin: 0 auto clamp(2rem, 4vw, 2.5rem) 0;
-            /* 40px - 48px */
-            margin-bottom: clamp(2.5rem, 4vw, 3rem);
+            /* 16px - 20px */
+            font-size: clamp(1rem, 2.5vw, 1.25rem);
+            line-height: 1.5em;
+            width: 100%;
+            max-width: (580/16rem);
+            /* 28px - 40px */
+            margin: 0 0 clamp(1.75rem, 4vw, 2.5rem);
             color: var(--bodyTextColorWhite);
-            text-align: center;
+            opacity: .8;
         }
 
         .cs-button-solid {
-            margin-bottom: (16/16rem);
-            height: initial;
-            line-height: clamp(2.875em, 5.5vw, 3.5em);
-        }
-
-        .cs-button-transparent {
-            z-index: 1;
-            position: relative;
-            display: inline-flex;
-            justify-content: center;
-            align-items: center;
-            border: 1px solid var(--bodyTextColorWhite);
-            margin: 0 (8/16rem);
-            background-color: transparent;
-            /* 46px - 56px */
-            height: clamp(2.875em, 5.5vw, 3.5em);
-            width: (180/16rem);
-            box-sizing: border-box;
-            padding: 0;
-            text-decoration: none;
             font-size: (16/16rem);
+            text-align: center;
             /* 46px - 56px */
-            line-height: clamp(2.875em, 5.5vw, 3.5em);
+            line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+            text-decoration: none;
             font-weight: 700;
+            /* clips corners of the before element */
+            overflow: hidden;
+            margin: 0;
             color: #fff;
-
-            .cs-img {
-                display: block;
-                margin-right: (12/16rem);
-            }
+            padding: 0 (28/16rem);
+            background-color: var(--primary);
+            display: inline-flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: (12/16rem);
+            position: relative;
+            z-index: 1;
+            transition: color 0.3s;
 
             &:before {
-                z-index: -1;
-                position: absolute;
-                /* so it sits on top of the border */
-                top: -1px;
-                bottom: -1px;
-                left: -1px;
-                right: -1px;
                 content: "";
-                opacity: 1;
-                /* this is what creates the grow affect on hover */
-                transform: scaleX(0);
+                position: absolute;
                 display: block;
+                height: 100%;
+                width: 0%;
                 background: #000;
-                transition: transform 0.3s;
-                transform-origin: left;
+                opacity: 1;
+                top: 0;
+                left: 0;
+                z-index: -1;
+                transition: width 0.3s;
             }
 
             &:hover {
+                color: #fff;
                 &:before {
-                    transform: scaleX(1);
+                    width: 100%;
                 }
+            }
+        }
+
+        .cs-picture {
+            width: 100%;
+            /* 427px - 581px */
+            max-width: clamp(26.6875rem, 60vw, 42.5rem);
+            height: auto;
+            display: flex;
+            align-items: flex-end;
+            position: relative;
+            z-index: 7;
+
+            img {
+                width: 100%;
+                height: auto;
+            }
+        }
+
+        .cs-background {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                position: absolute;
+                top: 0;
+                left: 0;
+                z-index: -1;
             }
         }
     }
@@ -176,163 +173,80 @@
 
 /* Tablet - 768px */
 @media only screen and (min-width: 48rem) {
-    #hero {
-        /* 32px - 40px */
-        padding: 0 clamp(2em, 5vw, 2.5em);
+    #hero-2334 {
+        /* 80px - 112px */
+        --heroPadding: clamp(5rem, 10vw, 7rem);
+
+        padding-bottom: var(--heroPadding);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: (90/16rem);
 
         .cs-container {
-            padding: clamp(7em, 27.95vw, 17.5em) 0 clamp(9em, 30.95vw, 23.5em) 0;
-            &:after {
-                position: absolute;
-                top: 0;
-                right: 0;
-                /* Right Line */
-                content: "";
-                opacity: 1;
-                display: block;
-                background: -moz-linear-gradient(top, rgba(250, 251, 252, 0) 0%, rgba(250, 251, 252, 0.5) 100%); /* FF3.6-15 */
-                background: -webkit-linear-gradient(top, rgba(250, 251, 252, 0) 0%, rgba(250, 251, 252, 0.5) 100%); /* Chrome10-25,Safari5.1-6 */
-                height: 100%;
-                width: 1px;
-            }
+            justify-content: flex-start;
+            flex-direction: row;
         }
 
-        .cs-button-solid {
-            margin-right: (20/16rem);
-            margin-bottom: 0;
-        }
-    }
-}
-
-/* Desktop Parallax Effect - 1300px */
-@media only screen and (min-width: 81.25em) {
-    #hero {
-        background: url("/assets/images/landing.jpg");
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-        /* creates parallax effect on background image */
-        background-attachment: fixed;
-    }
-}
-
-/* Dark Mode */
-@media only screen and (min-width: 0rem) {
-    body.dark-mode {
-        #hero {
-            .cs-background {
-                &:before {
-                    opacity: 0.8;
-                }
-            }
-        }
-    }
-}
-
-/*-- -------------------------- -->
-<---          Services          -->
-<--- -------------------------- -*/
-
-/* Mobile */
-@media only screen and (min-width: 0rem) {
-    .services {
-        z-index: 100;
-        position: relative;
-        border-top: (6/16em) solid var(--primary);
-        border-radius: (5/16em);
-        margin: auto;
-        margin-top: calc(-167 / 16 * 1em);
-        margin-bottom: (50/16em);
-        background: #fff;
-        max-width: (1320/16em);
-        width: 90%;
-        padding: (50/16em) (20/16em);
-        box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.05);
-        .card {
-            display: block;
-            margin: auto;
-            margin-bottom: (50/16em);
-            max-width: (357/16em);
+        .cs-content {
+            text-align: left;
             width: 100%;
+            max-width: 100%;
+            padding: (80/16rem) (32/16rem);
+            align-items: flex-start;
+        }
 
-            picture {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                border-radius: 50%;
-                margin: auto;
-                margin-bottom: (23/16em);
-                background: var(--primary);
-                height: (88/16em);
-                width: (88/16em);
+        .cs-overlay {
+            width: 100vw;
+            border-radius: 0 (300/16rem) (300/16rem) 0;
+            left: auto;
+            right: (-16/16rem);
+        }
 
-                img {
-                    height: (48/16em);
-                    width: (48/16em);
-                }
-            }
-            h2 {
-                margin-bottom: (13/20em);
-                font-size: (32/16em);
-                line-height: (27/20em);
-                font-weight: 700;
-                color: #1a1a1a;
-                text-align: center;
-            }
-            p {
-                opacity: 0.7;
-                width: 100%;
-                line-height: (24/18em);
-                text-align: center;
-            }
-            &:last-of-type {
-                margin-bottom: 0;
-            }
+        .cs-title {
+            width: 55%;
+        }
+
+        .cs-text {
+            width: 50%;
+        }
+
+        .cs-picture {
+            width: 56%;
+            position: absolute;
+            bottom: calc(var(--heroPadding)*-1 - 3rem);
+            right: (-10/16rem);
         }
     }
 }
 
-/* Inbetween */
-@media only screen and (min-width: 768px) {
-    .services {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-        width: 98%;
-        font-size: ~"min(1.8vw, 1em)";
+/* Desktop - 1024px */
+@media only screen and (min-width: 64rem) {
+    #hero-2334 {
+        .cs-content {
+            width: 80%;
+            max-width: (1000/16rem);
+        }
 
-        .card {
-            margin: 0;
-            max-width: (325/16em);
+        .cs-graphic {
+            width: (2982/16rem);
+        }
+
+        .cs-picture {
+            width: 50vw;
+            /* 32px - 80px */
+            right: (16/16rem);
         }
     }
 }
-
-/* Large Desktop */
-@media only screen and (min-width: 1300px) {
-    .services {
-        padding: (50/16em) (80/16em);
-
-        .card {
-            max-width: (357/16em);
+                                
+/* Large Desktop - 1300px */
+@media only screen and (min-width: 81.25rem) {
+    #hero-2334 {
+        .cs-content {
+            padding-left: 0;
         }
     }
 }
-
-/* Dark mode */
-@media only screen and (min-width: 0rem) {
-    body.dark-mode {
-        #services {
-            background: var(--medium);
-
-            picture {
-                background: var(--primaryDark);
-            }
-
-            h2 {
-                font-weight: bold;
-                color: #fff;
-            }
-        }
-    }
-}
+                                
